[package]
name = "rust-wasm-filter"
version = "0.1.0"
authors = ["narkaTee <narkaTee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
proxy-wasm = "0.2.1"

[lib]
name = "rust_filter"
crate-type = ["cdylib"]